[package]
name = "stegsolve-rs"
version = "0.2.0"
authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.81"
publish = false


[dependencies]
crc32fast = "1.4.2"
eframe = "0.31.0"
env_logger = "0.11.6"
image = "0.25.5"
rand = "0.9.0"
rfd = "0.15.2"
